{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "307c593a-cf18-4b67-a3fe-d4429f663a8f",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6d4a12f0-5b9d-44a3-8427-1a40f446c95d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "0d77f6a1-ada6-4298-a94b-89bafc5984d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseButton",
                    "type": "Button",
                    "id": "2ca9af6f-e04f-454d-96b4-36d908f74a31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleChatBox",
                    "type": "Button",
                    "id": "80552517-0ba7-4b93-9a8c-b3178037781f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ef0e8ae-504c-41ec-b92e-06f0e5f08bef",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ec657e7-49ab-4e31-9884-d708fda6d392",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5e8d0ab-8236-4936-91f5-38733487f400",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "205af9c0-6c58-433e-befa-cde7c3eedc33",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2000e52b-ceb3-4fb5-9a2e-47e403f42a1c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleChatBox",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}